Reorg install and plugin docs (#1916)
* Reorg plugin docs

Signed-off-by: Carlisia <carlisia@vmware.com>

* Improve install docs

Signed-off-by: Carlisia <carlisia@vmware.com>

* Change path

Signed-off-by: Carlisia <carlisia@vmware.com>

* Fix broken links

Signed-off-by: Carlisia <carlisia@vmware.com>

* Address more feedback

Signed-off-by: Carlisia <carlisia@vmware.com>

* One more fix

Signed-off-by: Carlisia <carlisia@vmware.com>

* Minor changes to address feedback

Signed-off-by: Carlisia <carlisia@vmware.com>

* More fixes

Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -4,27 +4,27 @@ toc:
       - page: About Velero
         url: /index.html
       - page: How Velero works
-        url: /about
+        url: /how-velero-works
       - page: About locations
         url: /locations
-      - page: Supported platforms
-        url: /support-matrix
   - title: Install
     subfolderitems:
       - page: Overview
         url: /install-overview
       - page: Upgrade to 1.1
         url: /upgrade-to-1.1
-      - page: Quick start with in-cluster MinIO
-        url: /get-started
-      - page: Run on AWS
-        url: /aws-config
-      - page: Run on Azure
-        url: /azure-config
-      - page: Run on GCP
-        url: /gcp-config
-      - page: Restic setup
+      - page: Requirements
+        url: /install-requirements
+      - page: Supported providers
+        url: /supported-providers
+      - page: Evaluation install 
+        url: /contributions/minio
+      - page: Restic integration
         url: /restic
+      - page: Examples
+        url: /examples
+      - page: Uninstalling
+        url: /uninstalling
   - title: Use
     subfolderitems:
       - page: Disaster recovery
@@ -37,10 +37,14 @@ toc:
         url: /restore-reference
       - page: Run in any namespace
         url: /namespace
-      - page: Extend with plugins
-        url: /plugins
       - page: Extend with hooks
         url: /hooks
+  - title: Plugins
+    subfolderitems:
+      - page: Overview
+        url: /overview-plugins
+      - page: Custom plugins
+        url: /custom-plugins
   - title: Troubleshoot
     subfolderitems:
       - page: Troubleshooting
