update gcr.io/heptio-images/ references to velero/
Signed-off-by: Adnan Abdulhussein <aadnan@vmware.com>

--- a/examples/nginx-app/with-pv.yaml
+++ b/examples/nginx-app/with-pv.yaml
@@ -70,7 +70,7 @@ spec:
           - mountPath: "/var/log/nginx"
             name: nginx-logs
             readOnly: false
-      - image: gcr.io/heptio-images/fsfreeze-pause:latest
+      - image: velero/fsfreeze-pause:latest
         name: fsfreeze
         securityContext:
           privileged: true
