--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -63,6 +63,10 @@ toc:
         url: /build-from-source
       - page: Run locally
         url: /run-locally
+      - page: Code standards
+        url: /code-standards
+      - page: Website guidelines
+        url: /website-guidelines
   - title: More information
     subfolderitems:
       - page: Backup file format
