run goreleaser.sh in container
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/hack/build-image/Dockerfile
+++ b/hack/build-image/Dockerfile
@@ -46,3 +46,7 @@ WORKDIR /go/src/github.com/golang
 RUN git clone -b v1.0.0 https://github.com/golang/protobuf
 WORKDIR /go/src/github.com/golang/protobuf
 RUN go install ./protoc-gen-go
+RUN wget --quiet https://github.com/goreleaser/goreleaser/releases/download/v0.120.8/goreleaser_Linux_x86_64.tar.gz && \
+    tar xvf goreleaser_Linux_x86_64.tar.gz && \
+    mv goreleaser /usr/bin/goreleaser && \
+    chmod +x /usr/bin/goreleaser
