--- a/site/_data/v1-2-0-toc.yml
+++ b/site/_data/v1-2-0-toc.yml
@@ -11,8 +11,8 @@ toc:
     subfolderitems:
       - page: Overview
         url: /install-overview
-      - page: Upgrade to 1.1
-        url: /upgrade-to-1.1
+      - page: Upgrade to 1.2
+        url: /upgrade-to-1.2
       - page: Supported providers
         url: /supported-providers
       - page: Evaluation install 
@@ -63,6 +63,10 @@ toc:
         url: /build-from-source
       - page: Run locally
         url: /run-locally
+      - page: Code standards
+        url: /code-standards
+      - page: Website guidelines
+        url: /website-guidelines
   - title: More information
     subfolderitems:
       - page: Backup file format
