Correct wording to better describe label use scenario
Signed-off-by: Jess Belliveau <jbelliveau@apptio.com>

--- a/site/_data/v1-1-0-toc.yml
+++ b/site/_data/v1-1-0-toc.yml
@@ -31,6 +31,8 @@ toc:
         url: /disaster-case
       - page: Cluster migration
         url: /migration-case
+      - page: Backup reference
+        url: /backup-reference
       - page: Restore reference
         url: /restore-reference
       - page: Run in any namespace
