switch to sleep infinity for clarity
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/examples/nginx-app/with-pv.yaml
+++ b/examples/nginx-app/with-pv.yaml
@@ -81,7 +81,7 @@ spec:
         command:
           - "/bin/bash"
           - "-c"
-          - "while true; do sleep 10000; done"
+          - "sleep infinity"
 
   
 ---
