--- a/site/_data/shortlinks.yml
+++ b/site/_data/shortlinks.yml
@@ -9,4 +9,4 @@
   destination: zenhub
 - title: Install Overview
   key: install-overview
-  destination: install-overview
+  destination: basic-install
