Switch from satori/go.uuid to gofrs/uuid
satori/go.uuid has a known issue with random uuid generation.
gofrs/uuid is still maintained and has fixed the random uuid generation
issue present in satori/go.uuid

Signed-off-by: John Naulty <johnnaulty@bitgo.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -78,8 +78,8 @@
   revision = "df38d32658d8788cd446ba74db4bb5375c4b0cb3"
 
 [[constraint]]
-  name = "github.com/satori/go.uuid"
-  version = "~1.2.0"
+  name = "github.com/gofrs/uuid"
+  version = "~3.2.0"
 
 [[constraint]]
   name = "github.com/spf13/afero"
