--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -54,6 +54,11 @@
   name = "github.com/json-iterator/go"
   version = "=1.1.8"
 
+# k8s.io/client-go v0.17 uses v1.2.1
+[[override]]
+  name = "github.com/gogo/protobuf"
+  version = "=1.2.1"
+
 #
 # Cloud provider packages
 #
