Fix for PR 2715, changed nobody:nobody to nobody:nogroup to be correct for Debian based image (for some reason, basic Kubernetes is able to run a Debian based container with nobody:nobody but docker run and VMware WCP fail which should be expected behavior)
Signed-off-by: Dave Smith-Uchida <dsmithuchida@vmware.com>

--- a/Dockerfile-velero
+++ b/Dockerfile-velero
@@ -28,6 +28,6 @@ RUN apt-get update && \
 
 ADD /bin/linux/amd64/velero /velero
 
-USER nobody:nobody
+USER nobody:nogroup
 
 ENTRYPOINT ["/velero"]
