change nobody:nobody to nobody:nogroup to be correct for Debian based image (#2189)
(for some reason, basic Kubernetes is able to run a Debian based container with nobody:nobody but
docker run and VMware WCP fail which should be expected behavior)

Signed-off-by: Dave Smith-Uchida <dsmithuchida@vmware.com>

--- a/Dockerfile-velero-restic-restore-helper-ppc64le
+++ b/Dockerfile-velero-restic-restore-helper-ppc64le
@@ -18,6 +18,6 @@ LABEL maintainer="Prajyot Parab <prajyot.parab@ibm.com>"
 
 ADD /bin/linux/ppc64le/velero-restic-restore-helper .
 
-USER nobody:nobody
+USER nobody:nogroup
 
 ENTRYPOINT [ "/velero-restic-restore-helper" ]
