--- a/Dockerfile-velero-ppc64le
+++ b/Dockerfile-velero-ppc64le
@@ -20,6 +20,6 @@ ADD /bin/linux/ppc64le/restic /usr/bin/restic
 
 ADD /bin/linux/ppc64le/velero /velero
 
-USER nobody:nobody
+USER nobody:nogroup
 
 ENTRYPOINT ["/velero"]
