--- a/site/_config.yml
+++ b/site/_config.yml
@@ -56,6 +56,12 @@ defaults:
       gh: https://github.com/vmware-tanzu/velero/tree/master
       layout: "docs"
   - scope:
+      path: docs/v1.3.0-beta.1
+    values:
+      version: v1.3.0-beta.1
+      gh: https://github.com/vmware-tanzu/velero/tree/v1.3.0-beta.1
+      layout: "docs"
+  - scope:
       path: docs/v1.2.0
     values:
       version: v1.2.0
@@ -154,6 +160,7 @@ versioning: true
 latest: v1.2.0
 versions:
 - master
+- v1.3.0-beta.1
 - v1.2.0
 - v1.1.0
 - v1.0.0
