Add initial documentation for CSI support
Fixes #2142

Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -39,6 +39,8 @@ toc:
         url: /namespace
       - page: Extend with hooks
         url: /hooks
+      - page: CSI Support (beta)
+        url: /csi
   - title: Plugins
     subfolderitems:
       - page: Overview
