--- a/site/_config.yml
+++ b/site/_config.yml
@@ -56,10 +56,10 @@ defaults:
       gh: https://github.com/vmware-tanzu/velero/tree/master
       layout: "docs"
   - scope:
-      path: docs/v1.3.0-beta.2
+      path: docs/v1.3.0
     values:
-      version: v1.3.0-beta.2
-      gh: https://github.com/vmware-tanzu/velero/tree/v1.3.0-beta.2
+      version: v1.3.0
+      gh: https://github.com/vmware-tanzu/velero/tree/v1.3.0
       layout: "docs"
   - scope:
       path: docs/v1.2.0
@@ -157,10 +157,10 @@ collections:
   - casestudies
 
 versioning: true
-latest: v1.2.0
+latest: v1.3.0
 versions:
 - master
-- v1.3.0-beta.2
+- v1.3.0
 - v1.2.0
 - v1.1.0
 - v1.0.0
