--- a/site/_data/toc-mapping.yml
+++ b/site/_data/toc-mapping.yml
@@ -3,7 +3,7 @@
 # that the navigation for older versions still work.
 
 master: master-toc
-v1.3.0-beta.2: v1-3-0-beta-2-toc
+v1.3.0: v1-3-0-toc
 v1.2.0: v1-2-0-toc
 v1.1.0: v1-1-0-toc
 v1.0.0: v1-0-0-toc
