--- a/site/_data/v1-3-0-toc.yml
+++ b/site/_data/v1-3-0-toc.yml
@@ -13,8 +13,8 @@ toc:
         url: /basic-install
       - page: Customize Installation
         url: /customize-installation
-      - page: Upgrade to 1.2
-        url: /upgrade-to-1.2
+      - page: Upgrade to 1.3
+        url: /upgrade-to-1.3
       - page: Supported providers
         url: /supported-providers
       - page: Evaluation install 
@@ -39,6 +39,8 @@ toc:
         url: /namespace
       - page: Extend with hooks
         url: /hooks
+      - page: CSI Support (beta)
+        url: /csi
   - title: Plugins
     subfolderitems:
       - page: Overview
