--- a/site/_config.yml
+++ b/site/_config.yml
@@ -56,6 +56,12 @@ defaults:
       gh: https://github.com/vmware-tanzu/velero/tree/master
       layout: "docs"
   - scope:
+      path: docs/v1.3.1
+    values:
+      version: v1.3.1
+      gh: https://github.com/vmware-tanzu/velero/tree/v1.3.1
+      layout: "docs"
+  - scope:
       path: docs/v1.3.0
     values:
       version: v1.3.0
@@ -158,9 +164,10 @@ collections:
   - plugin-list
 
 versioning: true
-latest: v1.3.0
+latest: v1.3.1
 versions:
 - master
+- v1.3.1
 - v1.3.0
 - v1.2.0
 - v1.1.0
