--- a/Dockerfile-velero-arm
+++ b/Dockerfile-velero-arm
@@ -14,6 +14,8 @@
 
 FROM arm32v7/ubuntu:bionic
 
+RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates
+
 ADD /bin/linux/arm/restic /usr/bin/restic
 
 ADD /bin/linux/arm/velero /velero
