--- a/Dockerfile-velero-arm64
+++ b/Dockerfile-velero-arm64
@@ -14,6 +14,10 @@
 
 FROM arm64v8/ubuntu:focal
 
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
+
 ADD /bin/linux/arm64/restic /usr/bin/restic
 
 ADD /bin/linux/arm64/velero /velero
