--- a/Dockerfile-velero-ppc64le
+++ b/Dockerfile-velero-ppc64le
@@ -16,6 +16,10 @@ FROM ppc64le/ubuntu:focal
 
 LABEL maintainer="Prajyot Parab <prajyot.parab@ibm.com>"
 
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
+
 ADD /bin/linux/ppc64le/restic /usr/bin/restic
 
 ADD /bin/linux/ppc64le/velero /velero
