--- a/site/_config.yml
+++ b/site/_config.yml
@@ -56,10 +56,10 @@ defaults:
       gh: https://github.com/vmware-tanzu/velero/tree/master
       layout: "docs"
   - scope:
-      path: docs/v1.4-pre
+      path: docs/v1.4
     values:
-      version: v1.4-pre
-      gh: https://github.com/vmware-tanzu/velero/tree/v1.4.0-beta.1
+      version: v1.4
+      gh: https://github.com/vmware-tanzu/velero/tree/v1.4.0
       layout: "docs"
   - scope:
       path: docs/v1.3.2
@@ -176,10 +176,10 @@ collections:
   - plugin-list
 
 versioning: true
-latest: v1.3.2
+latest: v1.4
 versions:
 - master
-- v1.4-pre
+- v1.4
 - v1.3.2
 - v1.3.1
 - v1.3.0
