Fix duplicate and missing TOC info
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/site/_data/v1-4-toc.yml
+++ b/site/_data/v1-4-toc.yml
@@ -11,6 +11,7 @@ toc:
     subfolderitems:
       - page: Basic Install
         url: /basic-install
+      - page: Customize Installation
         url: /customize-installation
       - page: Upgrade to 1.4
         url: /upgrade-to-1.4
