Update backup manifest
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/config/crd/bases/velero.io_backups.yaml
+++ b/config/crd/bases/velero.io_backups.yaml
@@ -358,6 +358,7 @@ spec:
               description: Progress contains information about the backup's execution
                 progress. Note that this information is best-effort only -- if Velero
                 fails to update it during a backup for any reason, it may be inaccurate/stale.
+              nullable: true
               properties:
                 itemsBackedUp:
                   description: ItemsBackedUp is the number of items that have actually
