--- a/site/Gemfile
+++ b/site/Gemfile
@@ -10,3 +10,4 @@ gem 'jekyll-sitemap', '~> 1.4'
 gem 'jekyll-titles-from-headings', '~> 0.5.3'
 gem 'jekyll-seo-tag', '~> 2.6', '>= 2.6.1'
 gem 'redcarpet', '~> 3.5'
+gem 'jemoji'
