Fix/clean scripts, generated code, and calls
Deleting the entire `generated` directory and running `make update`
works. Modifying an api and running `make verify` works as expected.

Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/config/crd/bases/velero.io_backupstoragelocations.yaml
+++ b/config/crd/bases/velero.io_backupstoragelocations.yaml
@@ -8,11 +8,6 @@ metadata:
   creationTimestamp: null
   name: backupstoragelocations.velero.io
 spec:
-  additionalPrinterColumns:
-  - JSONPath: .status.phase
-    description: Backup Storage Location status such as Available/Unavailable
-    name: Phase
-    type: string
   group: velero.io
   names:
     kind: BackupStorageLocation
@@ -20,12 +15,10 @@ spec:
     plural: backupstoragelocations
     singular: backupstoragelocation
   scope: Namespaced
-  subresources:
-    status: {}
   validation:
     openAPIV3Schema:
-      description: BackupStorageLocation is the Schema for the backupstoragelocations
-        API
+      description: BackupStorageLocation is a location where Velero stores backup
+        objects.
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -40,8 +33,8 @@ spec:
         metadata:
           type: object
         spec:
-          description: BackupStorageLocationSpec defines the desired state of a Velero
-            BackupStorageLocation
+          description: BackupStorageLocationSpec defines the specification for a Velero
+            BackupStorageLocation.
           properties:
             accessMode:
               description: AccessMode defines the permissions for the backup storage
@@ -87,7 +80,8 @@ spec:
           - provider
           type: object
         status:
-          description: BackupStorageLocationStatus defines the observed state of BackupStorageLocation
+          description: BackupStorageLocationStatus describes the current status of
+            a Velero BackupStorageLocation.
           properties:
             accessMode:
               description: "AccessMode is an unused field. \n Deprecated: there is
