--- a/config/samples/velero_v1_backupstoragelocation.yaml
+++ b/config/samples/velero_v1_backupstoragelocation.yaml
@@ -1,7 +1,16 @@
 apiVersion: velero.io/v1
 kind: BackupStorageLocation
 metadata:
-  name: backupstoragelocation-sample
+  creationTimestamp: null
+  labels:
+    component: velero
+  name: default
+  namespace: velero
 spec:
-  # Add fields here
-  foo: bar
+  config:
+    region: minio
+    s3ForcePathStyle: "true"
+    s3Url: http://minio.velero.svc:9000
+  objectStorage:
+    bucket: velero
+  provider: aws
