--- a/config/crd/bases/velero.io_downloadrequests.yaml
+++ b/config/crd/bases/velero.io_downloadrequests.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: downloadrequests.velero.io
 spec:
@@ -14,6 +14,7 @@ spec:
     listKind: DownloadRequestList
     plural: downloadrequests
     singular: downloadrequest
+  preserveUnknownFields: false
   scope: Namespaced
   validation:
     openAPIV3Schema:
