Update Jekyll to 4.1.0
* also updates jekyll-redirect-from to 0.16.0

Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -10,7 +10,7 @@ twitter:
   card: summary
 vm_logo: vm-logo.png
 gh_repo: https://github.com/vmware-tanzu/velero
-markdown: redcarpet
+markdown: kramdown
 hero:
   background-color: med-blue
 footer:
@@ -231,6 +231,3 @@ exclude:
   - CNAME
   - Runbook.docx
   - '*.sh'
-
-redcarpet:
-    extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "with_toc_data"]
