Update README for hugo-site
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/Dockerfile
+++ b/hugo-site/Dockerfile
@@ -1,9 +1,7 @@
 FROM ubuntu:20.04
 
 RUN apt update
-RUN apt install -y wget
-RUN wget https://github.com/gohugoio/hugo/releases/download/v0.72.0/hugo_0.72.0_Linux-64bit.deb
-RUN dpkg -i hugo_0.72.0_Linux-64bit.deb
+RUN apt install -y hugo
 
 WORKDIR /srv/hugo
 
