--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  base = "site/"
-  command = "jekyll build"
-  publish = "site/_site"
+  base = "hugo-site/"
+  command = "hugo --gc --minify"
+  publish = "hugo-site/public"
