--- a/hugo-site/config.yaml
+++ b/hugo-site/config.yaml
@@ -3,6 +3,8 @@ disablePathToLower: true
 languageCode: en-us
 title: Velero
 params:
+  author: Velero Authors
+  vm_logo: vm-logo.png
   logo: Velero.svg
   backgroundColor: med-blue
   latest: v1.4
@@ -15,18 +17,18 @@ params:
     cta_text: Documentation
     vm-link: http://vmware.github.io/
   footer_social_links:
-    Twitter:
+    - title: Twitter
       fa_icon: fab fa-twitter
       url: https://twitter.com/projectvelero
-    Slack:
+    - title: Slack
       fa_icon: fab fa-slack
       url: https://kubernetes.slack.com/messages/velero
-    Google Groups:
+    - title: Google Groups
       fa_icon: fas fa-users
       url: https://groups.google.com/forum/#!forum/projectvelero
-    RSS:
+    - title: RSS
       fa_icon: fa fa-rss
       url: feed.xml
-    GitHub:
+    - title: GitHub
       fa_icon: fab fa-github
       url: https://github.com/vmware-tanzu/velero
