update toc entry and guide with review sugestions
Signed-off-by: Abigail McCarthy <mabigail@vmware.com>

--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -75,7 +75,7 @@ toc:
         url: /code-standards
       - page: Website guidelines
         url: /website-guidelines
-      - page: Style guide
+      - page: Documentation style guide
         url: /style-guide
   - title: More information
     subfolderitems:
