Fix latest release information link from home page and blog post formating
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/config.yaml
+++ b/hugo-site/config.yaml
@@ -2,6 +2,8 @@ baseURL: http://example.org/
 disablePathToLower: true
 languageCode: en-us
 title: Velero
+frontmatter:
+  date: [":filename", ":default"]
 params:
   author: Velero Authors
   vm_logo: vm-logo.png
