Fix vmware link in footer
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/config.yaml
+++ b/hugo-site/config.yaml
@@ -17,7 +17,7 @@ params:
     cta_title: ''
     cta_url: /docs
     cta_text: Documentation
-    vm-link: http://vmware.github.io/
+    vm_link: http://vmware.github.io/
   footer_social_links:
     - title: Twitter
       fa_icon: fab fa-twitter
