Add rbac page to ToC
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -43,6 +43,8 @@ toc:
         url: /csi
       - page: Verifying Self-signed Certificates
         url: /self-signed-certificates
+      - page: Changing Velero's RBAC permissions
+        url: /rbac
   - title: Plugins
     subfolderitems:
       - page: Overview
