Shorten RBAC ToC title
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -43,7 +43,7 @@ toc:
         url: /csi
       - page: Verifying Self-signed Certificates
         url: /self-signed-certificates
-      - page: Changing Velero's RBAC permissions
+      - page: Changing RBAC permissions
         url: /rbac
   - title: Plugins
     subfolderitems:
