--- a/Dockerfile-velero-restic-restore-helper
+++ b/Dockerfile-velero-restic-restore-helper
@@ -14,7 +14,7 @@
 
 FROM ubuntu:focal
 
-LABEL maintainer="Steve Kriss <krisss@vmware.com>"
+LABEL maintainer="Nolan Brubaker <brubakern@vmware.com>"
 
 ADD /bin/linux/amd64/velero-restic-restore-helper .
 
