--- a/hugo-site/config.yaml
+++ b/hugo-site/config.yaml
@@ -7,7 +7,8 @@ params:
   author: Velero Authors
   vm_logo: vm-logo.png
   logo: Velero.svg
-  backgroundColor: med-blue
+  hero:
+    backgroundColor: med-blue
   versioning: true
   latest: v1.4
   versions:
