Set hugo version in netlify config
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   base = "hugo-site/"
   command = "hugo --gc --minify"
   publish = "hugo-site/public"
+
+[context.production.environment]
+  HUGO_VERSION = "0.73.0"
+
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.73.0"
