Clean up + add "last validated" column
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/config/crd/bases/velero.io_backupstoragelocations.yaml
+++ b/config/crd/bases/velero.io_backupstoragelocations.yaml
@@ -13,6 +13,11 @@ spec:
     description: Backup Storage Location status such as Available/Unavailable
     name: Phase
     type: string
+  - JSONPath: .status.lastValidationTime
+    description: LastValidationTime is the last time the backup store location was
+      validated
+    name: Last Validated
+    type: date
   - JSONPath: .metadata.creationTimestamp
     name: Age
     type: date
