Remove TODO for SEO tag
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/site/config.yaml
+++ b/site/config.yaml
@@ -1,5 +1,7 @@
+#baseURL: "https://velero.io/"
 disablePathToLower: true
 languageCode: en-us
+DefaultContentLanguage: "en"
 title: Velero
 frontmatter:
   date: [":filename", ":default"]
@@ -81,5 +83,6 @@ minify:
     xml:
       keepWhitespace: false
 enableRobotsTXT: true
+enableGitInfo: true
 permalinks:
   posts: "/blog/:slug/"
