Disable RSS for every sections except for posts (/blog)
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/site/config.yaml
+++ b/site/config.yaml
@@ -86,3 +86,9 @@ enableRobotsTXT: true
 enableGitInfo: true
 permalinks:
   posts: "/blog/:slug/"
+outputs:
+  home: ["HTML"]
+  section: ["HTML"]
+  page: ["HTML"]
+  taxonomy: ["HTML"]
+  term: ["HTML"]
