--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,6 @@
 
 # Using the * -> :splat rule should redirect anything under master to the matching file under main
 [[redirects]]
-  from = "docs/master/*"
-  to = "docs/main/:splat"
+  from = "/docs/master/*"
+  to = "/docs/main/:splat"
 
