Update branch name in GitHub Actions workflows
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/.github/workflows/push-builder.yml
+++ b/.github/workflows/push-builder.yml
@@ -2,7 +2,7 @@ name: build-image
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths:
     - 'hack/build-image/Dockerfile'
 
