--- a/config/crd/bases/velero.io_restores.yaml
+++ b/config/crd/bases/velero.io_restores.yaml
@@ -143,6 +143,13 @@ spec:
         status:
           description: RestoreStatus captures the current status of a Velero restore
           properties:
+            completionTimestamp:
+              description: CompletionTimestamp records the time the restore operation
+                was completed. Completion time is recorded even on failed restore.
+                The server's time is used for StartTimestamps
+              format: date-time
+              nullable: true
+              type: string
             errors:
               description: Errors is a count of all error messages that were generated
                 during execution of the restore. The actual errors are stored in object
@@ -161,6 +168,12 @@ spec:
               - Completed
               - PartiallyFailed
               - Failed
+              type: string
+            startTimestamp:
+              description: StartTimestamp records the time the restore operation was
+                started. The server's time is used for StartTimestamps
+              format: date-time
+              nullable: true
               type: string
             validationErrors:
               description: ValidationErrors is a slice of all validation errors (if
