Add github token so action can actually auth
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/.github/workflows/auto_assign_prs.yml
+++ b/.github/workflows/auto_assign_prs.yml
@@ -1,4 +1,4 @@
-name: 'Auto Assign PRs'
+name: 'Auto Assign PR Reviewers'
 on: pull_request
 
 jobs: 
@@ -8,3 +8,4 @@ jobs:
       - uses: kentaro-m/auto-assign-action@v1.1.1
         with: 
           configuration-path: ".github/auto_assign.yml"
+          repo-token: '${{ secrets.GITHUB_TOKEN }}'
