Update generated CRD manifests
Signed-off-by: JenTing Hsiao <jenting.hsiao@suse.com>

--- a/config/crd/bases/velero.io_deletebackuprequests.yaml
+++ b/config/crd/bases/velero.io_deletebackuprequests.yaml
@@ -1,11 +1,13 @@
-
----
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation
   creationTimestamp: null
+  labels:
+    app.kubernetes.io/name: velero
   name: deletebackuprequests.velero.io
 spec:
   group: velero.io
@@ -21,20 +23,15 @@ spec:
       description: DeleteBackupRequest is a request to delete one or more backups.
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
         spec:
-          description: DeleteBackupRequestSpec is the specification for which backups
-            to delete.
+          description: DeleteBackupRequestSpec is the specification for which backups to delete.
           properties:
             backupName:
               type: string
@@ -45,8 +42,7 @@ spec:
           description: DeleteBackupRequestStatus is the current status of a DeleteBackupRequest.
           properties:
             errors:
-              description: Errors contains any errors that were encountered during
-                the deletion process.
+              description: Errors contains any errors that were encountered during the deletion process.
               items:
                 type: string
               nullable: true
