--- a/config/crd/bases/velero.io_downloadrequests.yaml
+++ b/config/crd/bases/velero.io_downloadrequests.yaml
@@ -1,11 +1,13 @@
-
----
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation
   creationTimestamp: null
+  labels:
+    app.kubernetes.io/name: velero
   name: downloadrequests.velero.io
 spec:
   group: velero.io
@@ -18,18 +20,13 @@ spec:
   scope: Namespaced
   validation:
     openAPIV3Schema:
-      description: DownloadRequest is a request to download an artifact from backup
-        object storage, such as a backup log file.
+      description: DownloadRequest is a request to download an artifact from backup object storage, such as a backup log file.
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -50,8 +47,7 @@ spec:
                   - RestoreResults
                   type: string
                 name:
-                  description: Name is the name of the kubernetes resource with which
-                    the file is associated.
+                  description: Name is the name of the kubernetes resource with which the file is associated.
                   type: string
               required:
               - kind
@@ -64,12 +60,10 @@ spec:
           description: DownloadRequestStatus is the current status of a DownloadRequest.
           properties:
             downloadURL:
-              description: DownloadURL contains the pre-signed URL for the target
-                file.
+              description: DownloadURL contains the pre-signed URL for the target file.
               type: string
             expiration:
-              description: Expiration is when this DownloadRequest expires and can
-                be deleted by the system.
+              description: Expiration is when this DownloadRequest expires and can be deleted by the system.
               format: date-time
               nullable: true
               type: string
