--- a/config/crd/bases/velero.io_resticrepositories.yaml
+++ b/config/crd/bases/velero.io_resticrepositories.yaml
@@ -1,11 +1,13 @@
-
----
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation
   creationTimestamp: null
+  labels:
+    app.kubernetes.io/name: velero
   name: resticrepositories.velero.io
 spec:
   group: velero.io
@@ -20,14 +22,10 @@ spec:
     openAPIV3Schema:
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -35,20 +33,16 @@ spec:
           description: ResticRepositorySpec is the specification for a ResticRepository.
           properties:
             backupStorageLocation:
-              description: BackupStorageLocation is the name of the BackupStorageLocation
-                that should contain this repository.
+              description: BackupStorageLocation is the name of the BackupStorageLocation that should contain this repository.
               type: string
             maintenanceFrequency:
-              description: MaintenanceFrequency is how often maintenance should be
-                run.
+              description: MaintenanceFrequency is how often maintenance should be run.
               type: string
             resticIdentifier:
-              description: ResticIdentifier is the full restic-compatible string for
-                identifying this repository.
+              description: ResticIdentifier is the full restic-compatible string for identifying this repository.
               type: string
             volumeNamespace:
-              description: VolumeNamespace is the namespace this restic repository
-                contains pod volume backups for.
+              description: VolumeNamespace is the namespace this restic repository contains pod volume backups for.
               type: string
           required:
           - backupStorageLocation
