--- a/config/crd/bases/velero.io_serverstatusrequests.yaml
+++ b/config/crd/bases/velero.io_serverstatusrequests.yaml
@@ -1,11 +1,13 @@
-
----
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation
   creationTimestamp: null
+  labels:
+    app.kubernetes.io/name: velero
   name: serverstatusrequests.velero.io
 spec:
   group: velero.io
@@ -18,18 +20,13 @@ spec:
   scope: Namespaced
   validation:
     openAPIV3Schema:
-      description: ServerStatusRequest is a request to access current status information
-        about the Velero server.
+      description: ServerStatusRequest is a request to access current status information about the Velero server.
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -46,8 +43,7 @@ spec:
               - Processed
               type: string
             plugins:
-              description: Plugins list information about the plugins running on the
-                Velero server
+              description: Plugins list information about the plugins running on the Velero server
               items:
                 description: PluginInfo contains attributes of a Velero plugin
                 properties:
@@ -62,8 +58,7 @@ spec:
               nullable: true
               type: array
             processedTimestamp:
-              description: ProcessedTimestamp is when the ServerStatusRequest was
-                processed by the ServerStatusRequestController.
+              description: ProcessedTimestamp is when the ServerStatusRequest was processed by the ServerStatusRequestController.
               format: date-time
               nullable: true
               type: string
