Add markup config and use monokai for all code fences
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/site/config.yaml
+++ b/site/config.yaml
@@ -92,3 +92,14 @@ outputs:
   page: ["HTML"]
   taxonomy: ["HTML"]
   term: ["HTML"]
+markup:
+  highlight:
+    codeFences: true
+    guessSyntax: true
+    hl_Lines: ""
+    lineNoStart: 1
+    lineNos: false
+    lineNumbersInTable: true
+    noClasses: true
+    style: monokai
+    tabWidth: 4
